# CHRL

./: .gitignore  README.md  TRAINING_LOG.md  config.py  diagnostics.py  env.py  evaluate_all_checkpoints.py  evaluation.py  main.py  network.py  noise.py  prototype.py  pyproject.toml  replay_buffer.py  train.py  visualize.py
agents/: __init__.py  ddpg.py  td3.py
analysis/: test_result_01.txt  test_result_02.txt  test_result_03.txt  test_result_td3_01.txt  test_result_td3_02.txt
analysis/test_001/: test_result.txt
analysis/test_002/: test_result.txt
analysis/training_001/: tensorboard_scalars.txt  training_result.txt
analysis/training_002/: tensorboard_scalars.txt  training_result.txt
analysis/training_003/: tensorboard_scalars.txt  training_result.txt
analysis/training_004/: tensorboard_scalars.txt  training_result.txt
analysis/training_005/: tensorboard_scalars.txt  training_result.txt
analysis/training_006/: tensorboard_scalars.txt  training_result.txt
analysis/training_007/: tensorboard_scalars.txt  training_result.txt
analysis/training_008/: tensorboard_scalars.txt  training_result.txt
analysis/training_009/: tensorboard_scalars.txt  training_result.txt
analysis/training_010/: tensorboard_scalars.txt  training_result.txt
analysis/training_011/: tensorboard_scalars.txt  training_result.txt
diagnostics/: __init__.py  core.py
envs/: __init__.py  homeostatic.py
evaluation/: __init__.py  cli.py  core.py
training/: __init__.py  checkpoints.py  core.py  evaluation.py  logging.py  metrics.py
visualization/: __init__.py  core.py
(+29 files in other folders)
