[project]
name = "chrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]
